--- a/index.html
+++ b/index.html
@@ -63,34 +63,53 @@
           <h3>Other Work Experience</h3>
         </div>
         <div class = "subregion" id = "workTitle">
-          <ul>
-            <li>Educational Content Consultant</li><hr>
-            <li>Editor</li><hr>
-            <li>Faculty Advisor</li><hr>
-            <li>Coach</li><hr>
-           <li>Public Speaker</li>
-          </ul>
-        </div>
-        <div class = "subregion" id = "place">
-          <ul>
-            <li><a href="http://www.kudu.com">Kudu.com</a></li><hr>
-            <li><a href="https://muse.jhu.edu/journal/69">The Good Society: A Civic Studies Journal</a></li><hr>
-            <li><a href="https://issuu.com/stevenmaloney/docs/tcreviewvol1">Twin Cities Review of Political Phliosophy</a></li><hr>
-            <li><a href="https://cas.stthomas.edu/departments/areas-of-study/pre-law/">University of Saint Thomas Mock Trial Team</a></li><hr>
-            <li><p><a href="https://www.stthomas.edu/selimcenter/">The Selim Center for Lifelong Learning</a></p>
-                <p>The Winter Seminar</p>
-                <p><a href="https://minneapolis-mn.aauw.net/">American Association of University Women</a></p></li>
-          </ul>
+          <table>
+            <tr>
+              <th>Role</th>
+              <th>Place</th>
+              <th>Dates</th>
+            </tr>
+            <tr>
+              <td>Educational Content Consultant</td>
+              <td><a href="http://www.kudu.com">Kudu.com</a><td>
+              <td>January 2019 - August 2019</td>
+            </tr>
+            <tr>
+              <td>Editor</td>
+              <td><a href="https://muse.jhu.edu/journal/69">The Good Society: A Civic Studies Journal</a></td>
+              <td>February 2015 - August 2018</td>
+            </tr>
+            <tr>
+              <td>Faculty Advisor</td>
+              <td><a href="https://issuu.com/stevenmaloney/docs/tcreviewvol1">Twin Cities Review of Political Phliosophy</a></td>
+              <td>August 2011 - August 2012</td>
+            </tr>
+            <tr>
+              <td>Coach</td>
+              <td><a href="https://cas.stthomas.edu/departments/areas-of-study/pre-law/">University of Saint Thomas Mock Trial Team</a></td>
+              <td>December 2011 - April 2012</td>
+            </tr>
+            <tr>
+              <td>Public Speaker</td>
+              <td><a href="https://www.stthomas.edu/selimcenter/">The Selim Center for Lifelong Learning</a></td>
+              <td>March 2009 - March 2017
+            </tr>
+            <tr>
+              <td>Public Speaker</td>
+              <td><a href="https://minneapolis-mn.aauw.net/">American Association of University Women</a></td>
+              <td>January 2014</td>
+            </tr>
+          </table>
         </div>
         <div class= "subregion" id = "year">
           <ul>
-            <li>January 2019 - August 2019</li><hr>
-            <li>February 2015 - August 2018</li><hr>
-            <li>August 2011 - August 2012</li><hr>
-            <li>December 2011 - April 2012</li><hr>
-            <li><p>March 2009 - March 2017</p>
+            <li></li><hr>
+            <li></li><hr>
+            <li></li><hr>
+            <li></li><hr>
+            <li><p></p>
                 <p>January 2013 & 2014</p>
-                <p>January 2014</p></li>
+                <p></p></li>
           </ul>
         </div>
       </div>
