--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
         <div class = "title">
           <h3>Other Work Experience</h3>
         </div>
-        <div class = "subregion" id = "workTitle">
-          <table>
+          <table id = "xtraJobs">
             <tr>
               <th>Role</th>
               <th>Place</th>
@@ -71,7 +70,7 @@
             </tr>
             <tr>
               <td>Educational Content Consultant</td>
-              <td><a href="http://www.kudu.com">Kudu.com</a><td>
+              <td><a href="http://www.kudu.com">Kudu.com</a></td>
               <td>January 2019 - August 2019</td>
             </tr>
             <tr>
@@ -100,17 +99,6 @@
               <td>January 2014</td>
             </tr>
           </table>
-        </div>
-        <div class= "subregion" id = "year">
-          <ul>
-            <li></li><hr>
-            <li></li><hr>
-            <li></li><hr>
-            <li></li><hr>
-            <li><p></p>
-                <p>January 2013 & 2014</p>
-                <p></p></li>
-          </ul>
         </div>
       </div>
       <div class = "region education">
