--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <h2><a href = "mailto:steven.maloney@gmail.com">steven.maloney@gmail.com</a></h2>
         </div>
       </div>
-      <div class = "region prof">
+      <div class = "region">
         <div class = "title">
           <h3>Professor</h3>
         </div>
@@ -25,7 +25,7 @@
         <ul>
           <li>Issue and Controversies</li>
           <li>Political Thought from Renaissance to Marx</li>
-           <li> Political Thought from Nietzsche to Present</li>
+          <li> Political Thought from Nietzsche to Present</li>
           <li>American Government and Politics</li>
            <li>Constitutional Law</li>
         </ul>
@@ -58,7 +58,7 @@
           </ul>
         </div>
       </div>
-      <div class = "region workXp">
+      <div class = "region">
         <div class = "title">
           <h3>Other Work Experience</h3>
         </div>
@@ -101,7 +101,7 @@
           </table>
         </div>
       </div>
-      <div class = "region education">
+      <div class = "region">
         <div class ="title"><h3>Education</h3></div>
         <div id = "umd">
           <h4>The Univerity of Maryland</h4>
