--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
           <div class = "subregion award" id= "acs"><h4>Diversity Award for Programming and Membership</h4> <br> American Constitution Society <br> Awarded to Minneapolis-Saint Paul Chapter Board<br>2013</div>
           <div class = "subregion award" id= "compass"><h4>Compass Award for contributions to first-year students</h4><br> University of Wisconsin – River Falls<br>2013</div>
       </div>
+      <div class="region">
+          <div class="title"><br><br></div>
+      </div>
     </div>
   </main>
 </body>
